<resources>
    <string name="app_name">MyOccNurseApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_call">Call</string>
    <string name="action_video">Video</string>
    <string name="action_send_sms">Send Message</string>
    <string name="action_send">Send Email</string>
    <string name="action_about">About</string>
    <string name="Content1">Your Occupational Nurse</string>
    <string name="Content2">Consultation and Virtual ER </string>
    <string name="msg_action_call">We are connecting you via phone call</string>
    <string name="msg_action_video">We are preparing the Video Chat Room</string>
    <string name="msg_action_email">You are sending an email</string>
    <string name="msg_action_txtSms">You are sending a message</string>
</resources>
