<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.myoccnurse.app.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_video"
        android:orderInCategory="100"
        android:title="@string/action_video"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_call"
        android:orderInCategory="200"
        android:title="@string/action_call"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_send_sms"
        android:orderInCategory="300"
        android:title="@string/action_send_sms"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sendto"
        android:orderInCategory="300"
        android:title="@string/action_send"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="400"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
