<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0FFFFFFF"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="56dp"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/Footer_text"
        android:layout_width="217dp"
        android:layout_height="57dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:gravity="left"
        android:text="@string/Content1"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:fontFamily="@font/poppins_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_send_sms" />

    <TextView
        android:id="@+id/HeaderText"
        android:layout_width="222dp"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center|right|center_horizontal|center_vertical"
        android:maxLines="1"
        android:text="@string/Content2"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="14sp"
        android:textStyle="bold"
        app:fontFamily="@font/poppins_semibold"
        app:layout_constraintBottom_toTopOf="@+id/fabCall"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSendSms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:backgroundTint="#F0EDED"
        app:layout_constraintBottom_toTopOf="@+id/action_send_sms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video"
        app:srcCompat="@drawable/ic_textsms" />

    <TextView
        android:id="@+id/action_send_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/action_send_sms"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:fontFamily="@font/poppins_medium"
        app:layout_constraintBottom_toTopOf="@+id/Footer_text"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabSendSms" />

    <TextView
        android:id="@+id/video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/action_video"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:fontFamily="@font/poppins_medium"
        app:layout_constraintBottom_toTopOf="@+id/fabSendSms"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabVideo" />

    <TextView
        android:id="@+id/call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/action_call"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:fontFamily="@font/poppins_medium"
        app:layout_constraintBottom_toTopOf="@+id/fabVideo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabCall" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCall"
        android:layout_width="54dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        app:backgroundTint="#F0EDED"
        app:layout_constraintBottom_toTopOf="@+id/call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeaderText"
        app:srcCompat="@drawable/ic_call" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="#F0EDED"
        app:layout_constraintBottom_toTopOf="@+id/video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/call"
        app:srcCompat="@drawable/ic_videocam" />

</androidx.constraintlayout.widget.ConstraintLayout>